@@ -1,0 +1,3 @@
+2007-12-13  Moritz Schulte  <moritz@g10code.com>
+
+	* pam-test.c, Makefile.am: New files.
