@@ -1,3 +1,7 @@
+2007-12-13  Moritz Schulte  <moritz@g10code.com>
+
+	* configure.ac (AC_CONFIG_FILES): New: src/test/Makefile.
+
 2007-11-11  Moritz  <moritz@g10code.com>
 
 	* configure.ac: Add hardwired dirmngr path to AH_BOTTOM call.
